[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nu-recon"
version = "0.1.0"
description = "Targeted single-host passive reconnaissance."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nicholas Kloster" }]
dependencies = ["requests>=2.31"]

[project.scripts]
nu-recon = "nurecon.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["nurecon*"]
exclude = ["tests*"]
